--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<div class="content">
-  <span>{{title}} app is running!</span>
+<div class="route-container">
+  <router-outlet></router-outlet>
 </div>
-<router-outlet></router-outlet>
