--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,6 @@
-@import "~bootstrap-scss/bootstrap";
+body {
+  background-color: #343a40 !important;
+  font-family: Verdana !important;
+  color: #b4b4b4 !important;
+}
 
