--- a/src/app/games/games.component.scss
+++ b/src/app/games/games.component.scss
@@ -33,6 +33,10 @@ img:after {
   padding-top: 75%; /* 4:3 Aspect Ratio */
 }
 
+.container-img:hover {
+  box-shadow: 0 0 0 1px #b4b4b447;
+}
+
 .img-ratio {
   position: absolute;
   top: 0;
@@ -42,4 +46,44 @@ img:after {
   text-align: center;
   font-size: 20px;
   color: white;
+}
+
+.no-content-container {
+  text-align: center;
+  font-size: 1.5rem;
+  color: grey;
+  padding-top: 40px;
+}
+
+.card {
+  background-color: #343a40;
+}
+
+.game-card {
+  box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.29);
+}
+
+.select-effect {
+  display: none;
+  width: 100%;
+  height: 100%;
+  float: left;
+  position: absolute;
+  top: 0;
+  background-image: linear-gradient(to top, rgba(217, 212, 212, 0.34), rgb(52, 58, 64));
+  z-index: 10;
+}
+
+.container-img:hover .select-effect {
+  display: block;
+}
+
+.select-effect span {
+  color: #fffcfc;
+  font-weight: bold;
+  text-align: center;
+  font-size: 1.5rem;
+  margin-left: 10px;
+  position: relative;
+  top: 20px;
 }
