Added Angular Universal and PWA; Using Animations and modification for it to work with angular universal;

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="game; else noGame" class="col-md-12">
   <div class="row">
-    <div class="col-md-6 game-image">
+    <div @gameImageAnimation class="col-md-6 game-image">
       <div class="card mb-3 game-card">
         <div class="container-img rounded">
           <div class="img-ratio">
