Modification of theme Dark and Gold; Developing state in About page

--- a/src/app/games/games.component.html
+++ b/src/app/games/games.component.html
@@ -1,8 +1,8 @@
 <div class="row" *ngIf="games$ |async as games; else loading">
-  <div class="col-md-3" @gamesAnimation *ngFor="let game of games ">
+  <div class="col-lg-2 col-md-3 col-sm-6" @gamesAnimation *ngFor="let game of games ">
     <div class="card mb-3 game-card">
       <a class="container-img rounded" [routerLink]="['/game', game.id, game.name]">
-        <div class="select-effect">
+        <div class="select-effect flex flex-column">
           <span>{{game.name}}</span>
         </div>
         <div class="img-ratio">
