--- a/src/app/shared/under-construction/under-construction.component.html
+++ b/src/app/shared/under-construction/under-construction.component.html
@@ -1,3 +1,48 @@
+<div class="col-md-12">
+  <div class="row">
+
+    <div class="col-md-4">
+      <header>
+        <h3>Has:</h3>
+      </header>
+      <article>
+        <ul>
+          <li>List of Games</li>
+          <li>Search Game by name</li>
+          <li>Game page, with name and image</li>
+          <li>Work around broken images</li>
+        </ul>
+      </article>
+    </div>
+    <div class="col-md-4">
+      <header>
+        <h3>In Progress:</h3>
+      </header>
+      <article>
+        <ul>
+          <li>Filter by Category</li>
+          <li>Access play game from lobby</li>
+          <li>Server rendering</li>
+          <li>PWA</li>
+        </ul>
+      </article>
+    </div>
+    <div class="col-md-4">
+      <header>
+        <h3>For the future:</h3>
+      </header>
+      <article>
+        <ul>
+          <li>Game description</li>
+          <li>Gameplay images</li>
+          <li>Ratings</li>
+          <li>Login Dialog</li>
+          <li>Internationalization</li>
+        </ul>
+      </article>
+    </div>
+  </div>
+</div>
 <div class="col-md-12 no-content-container">
   <span class="span-icon">
     <svg class="bi bi-cone-striped" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor"
