--- a/src/app/lobby/lobby.component.html
+++ b/src/app/lobby/lobby.component.html
@@ -1,7 +1,7 @@
 <div>
   <form #searchForm="ngForm" autocomplete="off">
     <div class="form-group">
-      <div class="control">
+      <div class="control input-group">
         <input
           type="text"
           id="searchTermI"
@@ -12,6 +12,19 @@
           #searchTermI="ngModel"
           [class.is-danger]="searchTermI.invalid && !searchTermI.pristine"
         />
+        <div class="input-group-append">
+        <span class="input-group-text">
+          <svg class="bi bi-search" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor"
+               xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd"
+                  d="M10.442 10.442a1 1 0 011.415 0l3.85 3.85a1 1 0 01-1.414 1.415l-3.85-3.85a1 1 0 010-1.415z"
+                  clip-rule="evenodd"/>
+            <path fill-rule="evenodd"
+                  d="M6.5 12a5.5 5.5 0 100-11 5.5 5.5 0 000 11zM13 6.5a6.5 6.5 0 11-13 0 6.5 6.5 0 0113 0z"
+                  clip-rule="evenodd"/>
+          </svg>
+        </span>
+        </div>
       </div>
     </div>
   </form>
