--- a/src/app/lobby/lobby.component.scss
+++ b/src/app/lobby/lobby.component.scss
@@ -3,5 +3,26 @@
 }
 
 #searchTermI:hover {
-  box-shadow: 0 0 0 2px #b4b4b4;
+  border-color: #b78618;
+  border-width: 2px;
+}
+
+.bi.bi-search {
+  color: #b78618;
+}
+
+.form-control:focus {
+  border-color: #b78618;
+  outline: 0;
+  //box-shadow: 0 0 0 0.1rem #b78618;
+  box-shadow: none;
+  border-width: 2px;
+}
+
+.form-control:focus:hover {
+  border-color: #b78618;
+  outline: 0;
+  //box-shadow: 0 0 0 0.1rem #b78618;
+  box-shadow: none;
+  border-width: 2px;
 }
