--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -1,6 +1,7 @@
 .bg-dark {
-  box-shadow: inset 0 0 10px #3F3F3E;
-  border-bottom: solid 1px #353535;
+  box-shadow: 0 0 0 2px #b7861852;
+  background-image: radial-gradient(transparent 85%, #b78618);
+  border-bottom: solid 1px #ffffff;
 }
 
 .navbar-brand {
