--- a/src/app/lobby/lobby.component.html
+++ b/src/app/lobby/lobby.component.html
@@ -1,18 +1,10 @@
 <div>
   <form #searchForm="ngForm" autocomplete="off">
-    <div class="form-group">
-      <div class="control input-group">
-        <input
-          type="text"
-          id="searchTermI"
-          name="searchTermI"
-          class="form-control"
-          placeholder="Search by name ..."
-          [(ngModel)]="searchTerm"
-          #searchTermI="ngModel"
-          [class.is-danger]="searchTermI.invalid && !searchTermI.pristine"
-        />
-        <div class="input-group-append">
+    <div class="row">
+      <div class="col-md-6">
+        <div class="form-group">
+          <div class="control input-group">
+            <div class="input-group-prepend">
         <span class="input-group-text">
           <svg class="bi bi-search" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor"
                xmlns="http://www.w3.org/2000/svg">
@@ -24,9 +16,39 @@
                   clip-rule="evenodd"/>
           </svg>
         </span>
+            </div>
+            <label for="searchTermI" hidden></label>
+            <input
+              type="text"
+              id="searchTermI"
+              name="searchTermI"
+              class="form-control"
+              placeholder="Search by name ..."
+              [(ngModel)]="searchTerm"
+              #searchTermI="ngModel"
+              [class.is-danger]="searchTermI.invalid && !searchTermI.pristine"
+            />
+
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3">
+      </div>
+      <div class="col-md-3">
+        <div class="form-group">
+          <div class="control input-group mb-3">
+            <div class="input-group-prepend">
+              <label class="input-group-text" for="inputGroupSelect01">Category</label>
+            </div>
+            <select class="custom-select" id="inputGroupSelect01" (change)="onCategorySelected($event?.target?.value)">
+              <option selected value="">All</option>
+              <option value="{{cat.id}}" *ngFor="let cat of getCats() || []">{{cat.title}}</option>
+            </select>
+          </div>
         </div>
       </div>
     </div>
+
   </form>
   <cl-games [games$]="gamesToShow$"></cl-games>
 </div>
